testdata/kuttl/kuttl-test.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestSuite
parallel: 4
timeout: 300
startControlPlane: true
