testdata/kuttl/.chainsaw.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Configuration
metadata:
  creationTimestamp: null
  name: configuration
spec:
  parallel: 4
  timeouts:
    apply: 5m0s
    assert: 5m0s
    cleanup: 5m0s
    delete: 5m0s
    error: 5m0s
    exec: 5m0s
