testdata/kuttl/02-step.chainsaw.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: step
spec:
  catch:
  - command:
      args:
      - hello
      entrypoint: echo
  - command:
      args:
      - "1"
      entrypoint: sleep
  timeouts: {}
  try:
  - delete:
      apiVersion: v1
      kind: Pod
      name: my-pod
  - delete:
      apiVersion: v1
      kind: Pod
      labels:
        app: nginx
  - delete:
      apiVersion: v1
      kind: Pod
  - script:
      content: echo "hello world"
      skipLogOutput: true
  - command:
      args:
      - hello world
      entrypoint: echo
      skipLogOutput: true
