testdata/kuttl/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: kuttl
spec:
  steps:
  - catch:
    - script:
        content: echo hello
    - podLogs:
        name: nginx
    name: step-01
    try:
    - script:
        content: echo "hello world"
        skipLogOutput: true
    - command:
        args:
        - hello world
        entrypoint: echo
        skipLogOutput: true
    - delete:
        ref:
          apiVersion: v1
          kind: Pod
          name: my-pod
    - delete:
        ref:
          apiVersion: v1
          kind: Pod
          labels:
            app: nginx
    - delete:
        ref:
          apiVersion: v1
          kind: Pod
  - catch:
    - script:
        content: echo hello
    - script:
        content: sleep 1
    name: step-02
    try:
    - script:
        content: echo "hello world"
        skipLogOutput: true
    - command:
        args:
        - hello world
        entrypoint: echo
        skipLogOutput: true
    - delete:
        ref:
          apiVersion: v1
          kind: Pod
          name: my-pod
    - delete:
        ref:
          apiVersion: v1
          kind: Pod
          labels:
            app: nginx
    - delete:
        ref:
          apiVersion: v1
          kind: Pod
